# Trinamic-library

./: .gitignore  CMakeLists.txt  COPYING  README.md  TMC2130_I2C_map.c  TMC2130_I2C_map.h  common.c  common.h  tmc2130.c  tmc2130.h  tmc2130hal.c  tmc2130hal.h  tmc2209.c  tmc2209.h  tmc2209hal.c  tmc2209hal.h  tmc2240.c  tmc2240.h  tmc2240hal.c  tmc2240hal.h  tmc2660.c  tmc2660.h  tmc2660hal.c  tmc2660hal.h  tmc5160.c  tmc5160.h  tmc5160hal.c  tmc5160hal.h  tmchal.h  trinamic2130.c  trinamic2130.h
